RESOLVED FIXED96812
bbc homepage crashes immediately
https://bugs.webkit.org/show_bug.cgi?id=96812
Summary bbc homepage crashes immediately
Oliver Hunt
Reported 2012-09-14 11:25:41 PDT
The BBC homepage crashes immediately. I've tracked the regression down to http://trac.webkit.org/changeset/128400 which is the addition of property butterflies. <rdar://problem/12081386>
Attachments
the patch (1.41 KB, patch)
2012-09-14 16:03 PDT, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2012-09-14 16:03:09 PDT
Created attachment 164246 [details] the patch Reviewed in person by Oliver.
Filip Pizlo
Comment 2 2012-09-14 16:13:02 PDT
Note You need to log in before you can comment on or make changes to this bug.