bbc homepage crashes immediately https://bugs.webkit.org/show_bug.cgi?id=96812 <rdar://problem/12081386>

Reviewed by Oliver Hunt.

If you use the old storage pointer to write to space you thought was newly allocated,
you're going to have a bad time.

* runtime/JSArray.cpp:
(JSC::JSArray::unshiftCount):



Canonical link: https://commits.webkit.org/114753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128667 268f45cc-cd09-0410-ab3c-d52691b4dbfc